Containerization_Orchestration II/k8s/code/car-serv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: car-serv
  name: car-serv-deployment
  namespace: car-serv
spec:
  replicas: 2
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: car-serv
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: car-serv
      namespace: car-serv
    spec:
      containers:
        - image: elroydevops/car-serv
          imagePullPolicy: Always
          name: car-serv
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
